--- a/queries exp5-wikivecs.ipynb
+++ b/queries exp5-wikivecs.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "working with about 64%, currently using the document and loss `log P(gold)`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -1148,6 +1155,69 @@
    ],
    "source": [
     "evalCurrentState(False, 500000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "queries_exp.num_training_items = 1000000\n",
+    "\n",
+    "exp_results.append('increase training item size')\n",
+    "exp_results.append(('testing run', queries_exp.compute_batch(False)))\n",
+    "exp_results.append(('testing state', evalCurrentState(False, 10000000)))\n",
+    "\n",
+    "for i in xrange(5):\n",
+    "    res = (i, queries_exp.compute_batch())\n",
+    "    print res\n",
+    "    exp_results.append(res)\n",
+    "exp_results.append(('testing run', queries_exp.compute_batch(False)))\n",
+    "exp_results.append(('training state', evalCurrentState(True, 10000000)))\n",
+    "exp_results.append(('testing state', evalCurrentState(False, 10000000)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0.13266118701557572),\n",
+       " (1, 0.12355173346257406),\n",
+       " (2, 0.11546770283164702),\n",
+       " (3, 0.1092563206515393),\n",
+       " (4, 0.10597121073958943),\n",
+       " ('testing run', 0.10553999777445534),\n",
+       " ('training state', (2837, 0.6669016566795911)),\n",
+       " ('testing state', (2911, 0.6413603572655445)),\n",
+       " 'increase training item size',\n",
+       " ('testing run', 0.10553945666484769),\n",
+       " ('testing state', (93705, 0.6441491916119737)),\n",
+       " (0, 0.10374660023013943),\n",
+       " (1, 0.10251044899899585),\n",
+       " (2, 0.10196588812502484),\n",
+       " (3, 0.10156279893654875),\n",
+       " (4, 0.10114781341023653),\n",
+       " ('testing run', 0.10223237171087719),\n",
+       " ('training state', (517581, 0.29967483350432106)),\n",
+       " ('testing state', (93705, 0.6602529214022731))]"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp_results"
    ]
   },
   {
