--- a/queries exp7-wikivecs-didnt work.ipynb
+++ b/queries exp7-wikivecs-didnt work.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "change it to not use the document when looking for the link quality, to see how much that is actually helping\n",
+    "\n",
+    "also changing loss to be `gold - (max {other} + c)`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -230,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -241,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -252,7 +261,7 @@
        "4613263"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -321,9 +330,9 @@
     "               \n",
     "        \n",
     "    def _setup(self):\n",
-    "        self.x_document_input = T.imatrix('x_doc')\n",
+    "        #self.x_document_input = T.imatrix('x_doc')\n",
     "        \n",
-    "        self.x_document_id = T.ivector('x_doc_id')\n",
+    "        #self.x_document_id = T.ivector('x_doc_id')\n",
     "        self.x_surface_text_input = T.imatrix('x_surface_link')\n",
     "        self.x_surface_context_input = T.imatrix('x_surface_cxt')  # TODO\n",
     "        \n",
@@ -339,66 +348,66 @@
     "        \n",
     "        self.embedding_W = theano.shared(self.wordvecs.get_numpy_matrix().astype(theano.config.floatX))\n",
     "        \n",
-    "        self.document_l = lasagne.layers.InputLayer(\n",
-    "            (None,self.document_length), \n",
-    "            input_var=self.x_document_input\n",
-    "        )\n",
+    "#         self.document_l = lasagne.layers.InputLayer(\n",
+    "#             (None,self.document_length), \n",
+    "#             input_var=self.x_document_input\n",
+    "#         )\n",
     "    \n",
-    "        self.document_embedding_l = EmbeddingLayer(\n",
-    "            self.document_l,\n",
-    "            W=self.embedding_W,\n",
-    "            add_word_params=False,\n",
-    "        )\n",
+    "#         self.document_embedding_l = EmbeddingLayer(\n",
+    "#             self.document_l,\n",
+    "#             W=self.embedding_W,\n",
+    "#             add_word_params=False,\n",
+    "#         )\n",
     "        \n",
-    "        self.document_conv1_l = lasagne.layers.Conv2DLayer(\n",
-    "            self.document_embedding_l,\n",
-    "            num_filters=500,\n",
-    "            filter_size=(self.num_words_to_use_conv, self.wordvecs.vector_size),\n",
-    "            name='document_conv1',\n",
-    "            nonlinearity=lasagne.nonlinearities.tanh,\n",
-    "        )\n",
+    "#         self.document_conv1_l = lasagne.layers.Conv2DLayer(\n",
+    "#             self.document_embedding_l,\n",
+    "#             num_filters=500,\n",
+    "#             filter_size=(self.num_words_to_use_conv, self.wordvecs.vector_size),\n",
+    "#             name='document_conv1',\n",
+    "#             nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "#         )\n",
     "        \n",
-    "        self.document_max_l = lasagne.layers.Pool2DLayer(\n",
-    "            self.document_conv1_l,\n",
-    "            name='document_pool1',\n",
-    "            pool_size=(self.document_length - self.num_words_to_use_conv, 1),\n",
-    "            mode='sum',\n",
-    "        )\n",
+    "#         self.document_max_l = lasagne.layers.Pool2DLayer(\n",
+    "#             self.document_conv1_l,\n",
+    "#             name='document_pool1',\n",
+    "#             pool_size=(self.document_length - self.num_words_to_use_conv, 1),\n",
+    "#             mode='sum',\n",
+    "#         )\n",
     "\n",
-    "        self.document_dens1 = lasagne.layers.DenseLayer(\n",
-    "            self.document_max_l,\n",
-    "            num_units=250,\n",
-    "            name='doucment_dens1',\n",
-    "            nonlinearity=lasagne.nonlinearities.tanh,\n",
-    "        )\n",
+    "#         self.document_dens1 = lasagne.layers.DenseLayer(\n",
+    "#             self.document_max_l,\n",
+    "#             num_units=250,\n",
+    "#             name='doucment_dens1',\n",
+    "#             nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "#         )\n",
     "        \n",
-    "        self.document_drop1 = lasagne.layers.DropoutLayer(\n",
-    "            self.document_dens1,\n",
-    "            p=.25,\n",
-    "        )\n",
+    "#         self.document_drop1 = lasagne.layers.DropoutLayer(\n",
+    "#             self.document_dens1,\n",
+    "#             p=.25,\n",
+    "#         )\n",
     "        \n",
-    "        document_output_length = 200\n",
+    "#         document_output_length = 200\n",
     "        \n",
-    "        self.document_dens2 = lasagne.layers.DenseLayer(\n",
-    "            self.document_drop1,\n",
-    "            num_units=225,\n",
-    "            name='document_dens2',\n",
-    "            nonlinearity=lasagne.nonlinearities.tanh,\n",
-    "        )\n",
+    "#         self.document_dens2 = lasagne.layers.DenseLayer(\n",
+    "#             self.document_drop1,\n",
+    "#             num_units=225,\n",
+    "#             name='document_dens2',\n",
+    "#             nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "#         )\n",
     "        \n",
-    "        self.document_drop2 = lasagne.layers.DropoutLayer(\n",
-    "            self.document_dens2,\n",
-    "            p=.25,\n",
-    "        )\n",
+    "#         self.document_drop2 = lasagne.layers.DropoutLayer(\n",
+    "#             self.document_dens2,\n",
+    "#             p=.25,\n",
+    "#         )\n",
     "        \n",
-    "        self.document_dens3 = lasagne.layers.DenseLayer(\n",
-    "            self.document_drop2,\n",
-    "            num_units=document_output_length,\n",
-    "            name='document_dens3',\n",
-    "            nonlinearity=lasagne.nonlinearities.tanh,\n",
-    "        )\n",
+    "#         self.document_dens3 = lasagne.layers.DenseLayer(\n",
+    "#             self.document_drop2,\n",
+    "#             num_units=document_output_length,\n",
+    "#             name='document_dens3',\n",
+    "#             nonlinearity=lasagne.nonlinearities.tanh,\n",
+    "#         )\n",
     "        \n",
-    "        self.document_output = lasagne.layers.get_output(self.document_dens3)\n",
+    "#         self.document_output = lasagne.layers.get_output(self.document_dens3)\n",
     "        \n",
     "        self.surface_context_l = lasagne.layers.InputLayer(\n",
     "            (None, self.sentence_length),\n",
@@ -485,17 +494,20 @@
     "#             nonlinearity=lasagne.nonlinearities.tanh,\n",
     "#         )\n",
     "        \n",
-    "        self.document_aligned_l = InputLayer(\n",
-    "            (None, document_output_length),\n",
-    "            input_var=self.document_output[self.x_document_id,:]\n",
-    "        )\n",
+    "#         self.document_aligned_l = InputLayer(\n",
+    "#             (None, document_output_length),\n",
+    "#             input_var=self.document_output[self.x_document_id,:]\n",
+    "#         )\n",
     "        \n",
-    "        self.source_l = lasagne.layers.ConcatLayer(\n",
-    "            [self.document_aligned_l, self.surface_dens1]\n",
-    "        )\n",
+    "        ##############################################\n",
+    "        ## changed to not use the documented\n",
+    "        \n",
+    "#         self.source_l = lasagne.layers.ConcatLayer(\n",
+    "#             [self.document_aligned_l, self.surface_dens1]\n",
+    "#         )\n",
     "        \n",
     "        self.source_dens1 = lasagne.layers.DenseLayer(\n",
-    "            self.source_l,\n",
+    "            self.surface_dens1,   # CHANGED\n",
     "            num_units=300,\n",
     "            name='source_dens1',\n",
     "            nonlinearity=lasagne.nonlinearities.tanh,\n",
@@ -674,7 +686,9 @@
     "#         self.grouped, grouped_update = theano.scan(maxOverRange, sequences=self.y_grouping)\n",
     "        \n",
     "        def setSubSelector(indx, outputs):\n",
-    "            return T.set_subtensor(outputs[T.arange(indx[0], indx[1]), indx[3]], 1)\n",
+    "            r = T.set_subtensor(outputs[T.arange(indx[0], indx[1]), indx[3]], 1)\n",
+    "            return T.set_subtensor(r[indx[2], indx[3]], 0)  # set the gold item to zero\n",
+    "            #return T.set_subtensor(outputs[T.arange(indx[0], indx[1]), indx[3]], 1)\n",
     "        \n",
     "        num_target_samples = self.res_l.shape[0]\n",
     "        \n",
@@ -690,16 +704,17 @@
     "            sequences=select_seq,\n",
     "        )\n",
     "        \n",
-    "        self.groupped_elems = T.dot(self.selecting_matrix[-1], T.diag(T.exp(self.res_l)))\n",
-    "        self.groupped_res = T.log(self.groupped_elems.sum(axis=0)[T.arange(self.y_grouping.shape[0])])\n",
-    "        self.loss_vec = self.groupped_res - self.res_l[self.y_grouping[:,2]]\n",
+    "        self.groupped_elems = T.dot(self.selecting_matrix[-1], T.diag(self.res_l))\n",
+    "        #self.groupped_res = T.log(self.groupped_elems.sum(axis=0)[T.arange(self.y_grouping.shape[0])])\n",
+    "        self.groupped_res = self.groupped_elems.max(axis=0)[T.arange(self.y_grouping.shape[0])]\n",
+    "        self.loss_vec = T.max(self.groupped_res + 1 - self.res_l[self.y_grouping[:,2]], 0)\n",
     "        \n",
     "        self.all_params = (\n",
     "            #lasagne.layers.get_all_params(self.target_dens2) +\n",
     "            # TODO: add params for the target stuff, \n",
     "            lasagne.layers.get_all_params(self.target_simple) +\n",
-    "            lasagne.layers.get_all_params(self.source_dens2) +\n",
-    "            lasagne.layers.get_all_params(self.document_dens2)\n",
+    "            lasagne.layers.get_all_params(self.source_dens2)\n",
+    "            #lasagne.layers.get_all_params(self.document_dens2)\n",
     "        )\n",
     "        \n",
     "        # weight the positive samples more since there are fewer of them,\n",
@@ -721,8 +736,8 @@
     "        self.updates = lasagne.updates.adadelta(self.loss_vec.mean(), self.all_params)\n",
     "        \n",
     "        self.func_inputs = [\n",
-    "            self.x_document_input,\n",
-    "            self.x_surface_text_input, self.x_surface_context_input, self.x_document_id,\n",
+    "            #self.x_document_input,\n",
+    "            self.x_surface_text_input, self.x_surface_context_input, #self.x_document_id,\n",
     "            self.x_target_input, self.x_matches_surface, self.x_link_id, \n",
     "            self.y_answer, self.y_grouping\n",
     "        ]  # self.x_target_words,\n",
@@ -832,8 +847,8 @@
     "        \n",
     "    def run_batch(self, func):\n",
     "        res_vec, loss_sum, loss_vec = func(\n",
-    "            self.current_documents,\n",
-    "            self.current_surface_link, self.current_surface_context, self.current_link_id,\n",
+    "            #self.current_documents,\n",
+    "            self.current_surface_link, self.current_surface_context, #self.current_link_id,\n",
     "            self.current_target_input, self.current_target_matches_surface, self.current_target_id, \n",
     "            self.current_target_goal, self.current_learning_groups,  \n",
     "            # self.current_target_words,\n",
@@ -858,7 +873,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -979,18 +994,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "queries_exp.num_training_items = 500000"
+    "queries_exp.num_training_items = 50000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -999,9 +1014,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.190873171651\n",
-      "CPU times: user 2h 8min 26s, sys: 33.8 s, total: 2h 9min\n",
-      "Wall time: 17min 2s\n"
+      "0.190234110474\n",
+      "CPU times: user 1h 31min 40s, sys: 25.4 s, total: 1h 32min 5s\n",
+      "Wall time: 12min 10s\n"
      ]
     }
    ],
@@ -1011,28 +1026,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.151639619197\n",
-      "CPU times: user 4h 25min 42s, sys: 1min 37s, total: 4h 27min 19s\n",
-      "Wall time: 37min 17s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%time print queries_exp.compute_batch()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -1041,27 +1046,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2911, 0.09378220542768807)\n"
+      "(28422, 0.0)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(2911, 0.09378220542768807)"
+       "(28422, 0.0)"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "evalCurrentState(False)"
+    "evalCurrentState(False, 500000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -1070,16 +1075,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(0, 0.13266118701557572)\n",
-      "(1, 0.12355173346257406)\n",
-      "(2, 0.11546770283164702)\n",
-      "(3, 0.1092563206515393)\n",
-      "(4, 0.10597121073958943)\n",
-      "(2837, 0.6669016566795911)\n",
-      "(2911, 0.6413603572655445)\n"
+      "(28325, 0.0)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(28325, 0.0)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
+   "source": [
+    "evalCurrentState(True, 500000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "exp_results = []\n",
     "\n",
@@ -1090,6 +1110,86 @@
     "exp_results.append(('testing run', queries_exp.compute_batch(False)))\n",
     "exp_results.append(('training state', evalCurrentState(True)))\n",
     "exp_results.append(('testing state', evalCurrentState(False)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(0, 0.0012442890062829277),\n",
+       " (1, 0.0012170055321185696),\n",
+       " (2, 0.0011066949465393097),\n",
+       " (3, 0.0010886187919973039),\n",
+       " (4, 0.001062282717236833),\n",
+       " ('testing run', 0.0011542985617437999)]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "exp_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2846, 0.07273366127898806)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2846, 0.07273366127898806)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evalCurrentState(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ZeroDivisionError",
+     "evalue": "float division by zero",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-28-67f61744c2ca>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mevalCurrentState\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-26-af4020d63a4f>\u001b[0m in \u001b[0;36mevalCurrentState\u001b[1;34m(trainingData, numSamples)\u001b[0m\n\u001b[0;32m     17\u001b[0m                         \u001b[0mall_correct\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 19\u001b[1;33m     \u001b[0mr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mall_measured\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mall_correct\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m/\u001b[0m \u001b[0mall_measured\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     20\u001b[0m     \u001b[1;32mprint\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     21\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mZeroDivisionError\u001b[0m: float division by zero"
+     ]
+    }
+   ],
+   "source": [
+    "evalCurrentState(False)"
    ]
   },
   {
@@ -1556,7 +1656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -1616,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
