image for the training function

--- a/queries exp6-wikivecs.ipynb
+++ b/queries exp6-wikivecs.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -873,6 +873,17 @@
     "\n",
     "        \n",
     "queries_exp = EntityVectorLinkExp() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "theano.printing.pydotprint(queries_exp.train_func, 'functions/training_function.png')"
    ]
   },
   {
