--- a/queries exp7-wikivecs-didnt work.ipynb
+++ b/queries exp7-wikivecs-didnt work.ipynb
@@ -707,8 +707,9 @@
     "        self.groupped_elems = T.dot(self.selecting_matrix[-1], T.diag(self.res_l))\n",
     "        #self.groupped_res = T.log(self.groupped_elems.sum(axis=0)[T.arange(self.y_grouping.shape[0])])\n",
     "        self.groupped_res = self.groupped_elems.max(axis=0)[T.arange(self.y_grouping.shape[0])]\n",
-    "        self.loss_vec = T.max(self.groupped_res + 1 - self.res_l[self.y_grouping[:,2]], 0)\n",
-    "        \n",
+    "        #self.loss_vec = T.max(self.groupped_res + 1 - self.res_l[self.y_grouping[:,2]], 0)\n",
+    "        self.loss_vec = T.log(self.res_l[self.y_grouping[:,2]] - self.groupped_res)\n",
+    "\n",
     "        self.all_params = (\n",
     "            #lasagne.layers.get_all_params(self.target_dens2) +\n",
     "            # TODO: add params for the target stuff, \n",
