extracted wikivec from 6 is working at 64%

--- a/queries exp6-wikivecs-clean-gen.ipynb
+++ b/queries exp6-wikivecs-clean-gen.ipynb
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -920,38 +920,30 @@
    "source": [
     "# this thing shuffles the training data so we can evaluate this function\n",
     "\n",
-    "# import random\n",
-    "# def augmentTrainingData():\n",
-    "#     for quk in queries.keys():\n",
-    "#         qu = queries[quk]\n",
-    "#         for enk in qu.keys():\n",
-    "#             en = qu[enk]\n",
-    "#             if not en['gold']:\n",
-    "#                 del qu[enk]\n",
-    "#         if not qu:\n",
-    "#             del queries[quk]\n",
-    "#     for qu in queries.values():\n",
-    "#         training = random.random() > .15\n",
-    "#         for en in qu.values():\n",
-    "#             en['training'] = training\n",
-    "# augmentTrainingData()"
+    "import random\n",
+    "def augmentTrainingData():\n",
+    "    for quk in queries.keys():\n",
+    "        qu = queries[quk]\n",
+    "        for enk in qu.keys():\n",
+    "            en = qu[enk]\n",
+    "            if not en['gold']:\n",
+    "                del qu[enk]\n",
+    "        if not qu:\n",
+    "            del queries[quk]\n",
+    "    for qu in queries.values():\n",
+    "        training = random.random() > .15\n",
+    "        for en in qu.values():\n",
+    "            en['training'] = training\n",
+    "augmentTrainingData()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "According to the [United States Census Bureau] , the city has a total area of 0.9 ''\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def cleanTrainingData():\n",
     "    for quk in queries.keys():\n",
@@ -971,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1022,6 +1014,67 @@
     "exp_results.append(('large training state', evalCurrentState(True, 10000000)))\n",
     "exp_results.append(('testing run', queries_exp.compute_batch(False)))\n",
     "#exp_results.append(('testing state', evalCurrentState(False)))  # we don't have the gold items so we can't evaluate this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "queries_exp.num_training_items = 50000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0984703942967\n",
+      "CPU times: user 26min 3s, sys: 8.02 s, total: 26min 11s\n",
+      "Wall time: 3min 31s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%time print queries_exp.compute_batch()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2875, 0.2862608695652174)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(2875, 0.2862608695652174)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evalCurrentState(True)"
    ]
   },
   {
