--- a/queries exp6-wikivecs.ipynb
+++ b/queries exp6-wikivecs.ipynb
@@ -1181,18 +1181,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.11668211529148623"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "queries_exp.compute_batch(False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -1201,16 +1212,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2892, 0.0)\n"
+      "(2892, 0.549792531120332)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(2892, 0.0)"
+       "(2892, 0.549792531120332)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
